objects/FSL_Custom_Part__c.object
<CustomObject>
    <fields>
        <fullName>EPR_Flag__c</fullName>
        <label>EPR Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERP_Flag__c</fullName>
        <label>ERP Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Edited_Quantity__c</fullName>
        <formula>IF(Quantity_Edited__c == TRUE, IMAGE(&apos;/resource/FSL_AlteredTime&apos;, &quot;FSL_AlteredTime&quot;, 26, 26), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edited Quantity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Part_Description__c</fullName>
        <label>Part Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Part_Line_Number__c</fullName>
        <label>Part Line Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Line_Type__c</fullName>
        <label>Part Line Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts_Hub__c</fullName>
        <label>Parts Hub</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Edited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quantity Edited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quantity_Ordered__c</fullName>
        <label>Quantity Ordered</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Used__c</fullName>
        <label>Quantity Used</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>This is used for the Store of Quantity.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Replacement_Reason__c</fullName>
        <description>This Field is used for the Add custom Parts. (Manually by User)</description>
        <label>Replacement / Repair Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Pay</fullName>
                </value>
                <value>
                    <fullName>Damaged Upon Removal</fullName>
                </value>
                <value>
                    <fullName>Progressive Damage</fullName>
                </value>
                <value>
                    <fullName>Refer to Narrative</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Root Cause</fullName>
                </value>
                <value>
                    <fullName>Service Publication</fullName>
                </value>
                <value>
                    <fullName>Campaign-TRP-ATC</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Order_PM_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order PM Part</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Preventive Maintenance Parts</relationshipLabel>
        <relationshipName>Custom_Parts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Order_UR_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order UR Part</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>User Requested Parts</relationshipLabel>
        <relationshipName>Custom_Parts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Order__c</fullName>
        <label>Service Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Custom Parts</relationshipLabel>
        <relationshipName>Custom_Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Staging_Location__c</fullName>
        <label>Staging Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Location__c</fullName>
        <label>Sub Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Custom Part</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Service_Order_PM_Part__c</columns>
        <columns>Service_Order_UR_Part__c</columns>
        <columns>Service_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Part_Description__c</columns>
        <columns>Part_Number__c</columns>
        <columns>Parts_Hub__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Parts</pluralLabel>
    <recordTypes>
        <fullName>Preventive_Maintenance_Part</fullName>
        <active>true</active>
        <label>Preventive Maintenance Part</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Evl_User_Part_Number_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(    
    $Profile.Name =  &quot;EVL_Dealer_Advanced&quot;
     ||
    $Profile.Name =  &quot;EVL_Dealer_Technician&quot;
	||
	 $Profile.Name =  &quot;EVL_Dealer_Readonly&quot;
	,
    ISBLANK(Part_Number__c)
)</errorConditionFormula>
        <errorDisplayField>Part_Number__c</errorDisplayField>
        <errorMessage>Part Number is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL_Service_Order_Closed_CustomParts</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISPICKVAL(Service_Order__r.Status, &quot;Closed&quot;),
ISPICKVAL(Service_Order__r.Status, &quot;Canceled&quot;))</errorConditionFormula>
        <errorMessage>Changes cannot be made after a job is closed</errorMessage>
    </validationRules>
</CustomObject>